# programs

./: .gitignore  .prettierrc.json  Anchor.toml  jest.config.js  package-lock.json  package.json  tsconfig.json
.husky/: pre-commit
app/: .eslintignore  .eslintrc.js  package-lock.json  package.json  tsconfig.json
app/src/: App.tsx  config.ts  index.tsx
app/src/api/: mutations.ts  query.ts  seed.ts
app/src/containers/: ConnectProvider.tsx  QueryProvider.tsx
app/src/hooks/: useGetLatest.ts
app/src/types/: event.ts  index.ts
programs/trivia/: Cargo.toml
programs/trivia/src/: access.rs  auth.rs  data.rs  error.rs  event.rs  lib.rs  seed.rs
tests/: trivia.js  trivia.ts  utils.ts
types/: common.ts  data.ts  event.ts  index.ts  seed.ts
types/idl/: trivia.json
