[package]
name = "trivia"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "trivia"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
borsh = { version = "0.9.1", features = ["const-generics"] }
anchor-spl = {version = "0.24.2"}
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
num-traits = "0.2"
num-derive = "0.3"
